--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "kareem kasem",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt": "^0.2.0",
     "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1"
   },
