--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "jwt": "^0.2.0",
-    "mongodb": "^6.2.0",
-    "multer": "^1.4.5-lts.1"
+    "mongodb": "^6.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
